@@ -65,6 +65,7 @@ https://github.com/r-lib/R6
 dbConnection
 https://github.com/DavidPatShuiFong/dbConnection
 
+
 BSD-3
 =====
 
@@ -145,6 +146,8 @@ GNU Affero General Public License (AGPL v3)
 shinyjs
 https://github.com/daattali/shinyjs
 
+rintrojs
+https://github.com/carlganz/rintrojs
 
 Inno Setup
 ==========
